[gd_scene load_steps=4 format=3 uid="uid://gameui001"]

[ext_resource type="Script" path="res://GameUI.gd" id="1"]
[ext_resource type="PackedScene" path="res://LevelUpScreen.tscn" id="2"]
[ext_resource type="PackedScene" path="res://NitoriShopUI.tscn" id="3"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 40.0
value = 100.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 320.0
offset_bottom = 70.0
value = 0.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 110.0
text = "Lv.1"

[node name="LevelUpScreen" parent="." instance=ExtResource("2")]

[node name="NitoriShopUI" parent="." instance=ExtResource("3")]

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 110.0
offset_right = 150.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
text = "金币: 0"
